[package]
name = "rlua-lua54-pico8-sys"
version = "0.1.3"
keywords = ["bindings", "lua"]
categories = ["external-ffi-bindings"]
description = "Bindings to lua's C API with pico8 modification"
repository = "https://github.com/amethyst/rlua"
readme = "README.md"
edition = "2018"
links = "lua5.4-pico8"
build = "build.rs"
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.24"

[features]
default = []
lua54-pkg-config = []
static = []
lua-no-oslib = []
